# android-jni-example

./: README.md  build.gradle.kts  image_magic_load.sh  image_magic_load2.sh  libjpeg_load.sh  libpng_load.sh  openssl.sh  potrace_load.sh  zlib_load.sh
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  native_debug.h  nativelib.cpp
src/main/cpp/imagemagick/include/MagickCore/: magick-baseconfig.h  version.h
src/main/java/com/example/nativelib/: ImageMagicProcessFragment.kt  JniLauncherActivity.kt  JniLauncherFragment.kt  LibJpegProcessFragment.kt  LibPngProcessFragment.kt  NativeLib.kt  Utils.kt
src/main/res/layout/: activity_jni.xml  fragment_image_process.xml  fragment_jni_launcher.xml
src/main/res/navigation/: jni_nav_graph.xml
